# vector-db-bench

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt  quality_gates.txt
results/_style/: repo.mplstyle
src/vdb/: __init__.py  runner.py  types.py
src/vdb/bench/: sweep.py
src/vdb/cli/: main.py
src/vdb/corpus/: synthesize.py
src/vdb/index/: backends.py
src/vdb/metrics/: score.py
src/vdb/viz/: charts.py
tests/: test_backends_faiss.py  test_backends_numpy.py  test_metrics.py  test_runner.py  test_synth.py
